--- a/cliente/templates/contatos.html
+++ b/cliente/templates/contatos.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-   Nome:  {{cliente.nome}}
-   Nome:  {{cliente.cpf}}
-   Nome:  {{cliente.tipo}}
+    criando nova view test
 </body>
 </html>
